# college-assignments

./: .gitignore  CMakeLists.txt
sheet1_solutions/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
sheet2-solutions/: sh2task4.cpp  task1.cpp  task2.cpp  task3.cpp
sheet3-solutions/: fraction.cpp  input.txt  student_record.cpp  time.cpp
