cmake_minimum_required(VERSION 3.22)
project(college_assignments)

set(CMAKE_CXX_STANDARD 14)



add_executable(task1 sheet1_solutions/task1.cpp)
add_executable(task2 sheet1_solutions/task2.cpp)
add_executable(task3 sheet1_solutions/task3.cpp)
add_executable(task4 sheet1_solutions/task4.cpp)
add_executable(sh2task1 sheet2-solutions/sh2task1.cpp)
add_executable(sh2task2 sheet2-solutions/sh2task2.cpp)
add_executable(sh2task3 sheet2-solutions/sh2task3.cpp)
add_executable(sh2task4 sheet2-solutions/sh2task4.cpp)
add_executable(time sheet3-solutions/time.cpp)
add_executable(fraction sheet3-solutions/fraction.cpp)
add_executable(student_record sheet3-solutions/student_record.cpp)